# aim-challenge

./: .dockerignore  .env.example  .gitignore  ASSIGNMENT.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
data/compare/: phase0_walking_skeleton.json  phase1_api_version.json  phase2_dedup.json  phase4_full.json  phase4_rerank_only.json  phase6h_cap3_cee-founder-media.json  phase6h_cap3_saas-ai-legislation.json
data/evals/: SUMMARY.md
docs/: ARCHITECTURE.md  DECISIONS.md  DEMO_NOTES.md  DEMO_SCRIPT.md  DESIGN_SYSTEM.md  LESSONS.md  PRODUCT_NOTES.md  RESEARCH_NOTES.md  ROADMAP.md
evals/: golden.jsonl
models/: schemas.py
pipeline/: _util.py  embedding.py  ingestion.py  processing.py  report.py  retrieval.py  storage.py  vector_store.py
scripts/: capture_phase4_snapshots.py  capture_phase6h.py  cleanup_pinecone_dupes.py  compare_digests.py  diagnose_saas_ranking.py  eval_digest.py  phase0_skeleton.py  phase2_verify.py  run_pipeline.py
static/: app.js  index.html  style.css
tests/: test_collapse.py
